Add page/route to create new workout for person

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Workout Tracker</title>
-
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
                         <ul class="space-y-2 pb-2">
 
                             <li>
-                                <a href="https://demo.themesberg.com/windster/"
+                                <a href="{{ url_for('dashboard') }}"
                                     class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group">
                                     <svg class="w-6 h-6 text-gray-500 group-hover:text-gray-900 transition duration-75"
                                         fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -71,7 +71,7 @@
                             </li>
 
                             <li>
-                                <a href="https://demo.themesberg.com/windster/users/list/"
+                                <a href="{{ url_for('display_workouts_for_person' ,person_id=1) }}"
                                     class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
                                     <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"
                                         fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -85,7 +85,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://demo.themesberg.com/windster/users/list/"
+                                <a href="{{ url_for('display_workouts_for_person' ,person_id=2) }}"
                                     class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
                                     <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"
                                         fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -179,6 +179,5 @@
     </div>
 
 </body>
-<script src="https://cdn.tailwindcss.com"></script>
 
 </html>
