--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
                 <span class="text-base font-normal text-gray-500">List of rep maxes</span>
             </div>
             <div class="flex-shrink-0">
-                <a href="#" class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg p-2">View workouts</a>
+                <a href="{{ url_for('display_workouts_for_person' ,person_id=1) }}"
+                    class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg p-2">View workouts</a>
             </div>
         </div>
 
@@ -156,7 +157,8 @@
                 <span class="text-base font-normal text-gray-500">List of rep maxes</span>
             </div>
             <div class="flex-shrink-0">
-                <a href="#" class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg p-2">View workouts</a>
+                <a href="{{ url_for('display_workouts_for_person' ,person_id=2) }}"
+                    class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg p-2">View workouts</a>
             </div>
         </div>
 
