Add route to display selected workout for a person

--- a/templates/workouts.html
+++ b/templates/workouts.html
@@ -39,6 +39,9 @@
                                     class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                     Lat Pulldown
                                 </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider w-8">
+                                </th>
                             </tr>
                         </thead>
                         <tbody class="bg-white">
@@ -58,39 +61,15 @@
                                 <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                     5 x 60kg
                                 </td>
-                            </tr>
-                            <tr>
-                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
-                                    Apr 23 ,2021
-                                </td>
-                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
-                                    5 x 60kg
-                                </td>
                                 <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                    5 x 60kg
-                                </td>
-                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
-                                    5 x 60kg
-                                </td>
-                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                    5 x 60kg
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
-                                    Apr 23 ,2021
-                                </td>
-                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
-                                    5 x 60kg
-                                </td>
-                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                    5 x 60kg
-                                </td>
-                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
-                                    5 x 60kg
-                                </td>
-                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                    5 x 60kg
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Edit
+                                    </a>
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Delete
+                                    </a>
                                 </td>
                             </tr>
                             <tr>
@@ -109,6 +88,16 @@
                                 <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                     5 x 60kg
                                 </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Edit
+                                    </a>
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Delete
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
@@ -126,6 +115,16 @@
                                 <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                     5 x 60kg
                                 </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Edit
+                                    </a>
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Delete
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
@@ -143,6 +142,16 @@
                                 <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                     5 x 60kg
                                 </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Edit
+                                    </a>
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Delete
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
@@ -159,6 +168,70 @@
                                 </td>
                                 <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                     5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Edit
+                                    </a>
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Delete
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
+                                    Apr 23 ,2021
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
+                                    5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
+                                    5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Edit
+                                    </a>
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Delete
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
+                                    Apr 23 ,2021
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
+                                    5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
+                                    5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    5 x 60kg
+                                </td>
+                                <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Edit
+                                    </a>
+                                    <a href="#"
+                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                        Delete
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
