--- a/templates/workout.html
+++ b/templates/workout.html
@@ -32,60 +32,48 @@
                         class="px-4 bg-gray-50 text-gray-700 align-middle py-3 text-xs font-semibold text-left uppercase border-l-0 border-r-0 whitespace-nowrap">
                         Top Set</th>
                     <th
-                        class="px-4 bg-gray-50 text-gray-700 align-middle py-3 text-xs font-semibold text-left uppercase border-l-0 border-r-0 whitespace-nowrap min-w-140-px">
+                        class="px-4 bg-gray-50 text-gray-700 align-middle py-3 text-xs font-semibold text-left uppercase border-l-0 border-r-0 whitespace-nowrap min-w-140-px w-8">
                     </th>
                 </tr>
             </thead>
             <tbody class="divide-y divide-gray-100">
                 <tr class="text-gray-500">
-                    <th class="border-t-0 px-4 align-middle text-sm font-normal whitespace-nowrap p-4 text-left">Squats
+                    <th class="border-t-0 px-4 align-middle text-l font-normal whitespace-nowrap p-4 text-left">Squats
                     </th>
-                    <td class="border-t-0 px-4 align-middle text-xs font-medium text-gray-900 whitespace-nowrap p-4">
+                    <td class="border-t-0 px-4 align-middle text-l font-medium text-gray-900 whitespace-nowrap p-4">
                         5 x 60kg</td>
                     <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
-
+                        <a href="#"
+                            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                            Edit
+                        </a>
+                        <a href="#"
+                            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                            Delete
+                        </a>
                     </td>
                 </tr>
                 <tr class="text-gray-500">
-                    <th class="border-t-0 px-4 align-middle text-sm font-normal whitespace-nowrap p-4 text-left">Squats
+                    <th class="border-t-0 px-4 align-middle text-l font-normal whitespace-nowrap p-4 text-left">Bench
                     </th>
-                    <td class="border-t-0 px-4 align-middle text-xs font-medium text-gray-900 whitespace-nowrap p-4">
+                    <td class="border-t-0 px-4 align-middle text-l font-medium text-gray-900 whitespace-nowrap p-4">
                         5 x 60kg</td>
                     <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
-
+                        <a href="#"
+                            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                            Edit
+                        </a>
+                        <a href="#"
+                            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                            Delete
+                        </a>
                     </td>
                 </tr>
                 <tr class="text-gray-500">
-                    <th class="border-t-0 px-4 align-middle text-sm font-normal whitespace-nowrap p-4 text-left">Squats
+                    <th class="border-t-0 px-4 align-middle text-l font-normal whitespace-nowrap p-4 text-left">Lat
+                        Pulldowns
                     </th>
-                    <td class="border-t-0 px-4 align-middle text-xs font-medium text-gray-900 whitespace-nowrap p-4">
-                        5 x 60kg</td>
-                    <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
-
-                    </td>
-                </tr>
-                <tr class="text-gray-500">
-                    <th class="border-t-0 px-4 align-middle text-sm font-normal whitespace-nowrap p-4 text-left">Squats
-                    </th>
-                    <td class="border-t-0 px-4 align-middle text-xs font-medium text-gray-900 whitespace-nowrap p-4">
-                        5 x 60kg</td>
-                    <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
-
-                    </td>
-                </tr>
-                <tr class="text-gray-500">
-                    <th class="border-t-0 px-4 align-middle text-sm font-normal whitespace-nowrap p-4 text-left">Squats
-                    </th>
-                    <td class="border-t-0 px-4 align-middle text-xs font-medium text-gray-900 whitespace-nowrap p-4">
-                        5 x 60kg</td>
-                    <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
-
-                    </td>
-                </tr>
-                <tr class="text-gray-500">
-                    <th class="border-t-0 px-4 align-middle text-sm font-normal whitespace-nowrap p-4 text-left">Squats
-                    </th>
-                    <td class="border-t-0 px-4 align-middle text-xs font-medium text-gray-900 whitespace-nowrap p-4">
+                    <td class="border-t-0 px-4 align-middle text-l font-medium text-gray-900 whitespace-nowrap p-4">
                         5 x 60kg</td>
                     <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
                         <a href="#"
