--- a/templates/workout.html
+++ b/templates/workout.html
@@ -43,7 +43,7 @@
                     <td class="border-t-0 px-4 align-middle text-l font-medium text-gray-900 whitespace-nowrap p-4">
                         5 x 60kg</td>
                     <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
-                        <a href="#"
+                        <a href="{{ url_for('show_topset_from_workout_for_person' ,person_id=person_id, workout_id=workout_id, topset_id=1) }}"
                             class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
                             Edit
                         </a>
@@ -59,7 +59,7 @@
                     <td class="border-t-0 px-4 align-middle text-l font-medium text-gray-900 whitespace-nowrap p-4">
                         5 x 60kg</td>
                     <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
-                        <a href="#"
+                        <a href="{{ url_for('show_topset_from_workout_for_person' ,person_id=person_id, workout_id=workout_id, topset_id=1) }}"
                             class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
                             Edit
                         </a>
@@ -76,7 +76,7 @@
                     <td class="border-t-0 px-4 align-middle text-l font-medium text-gray-900 whitespace-nowrap p-4">
                         5 x 60kg</td>
                     <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
-                        <a href="#"
+                        <a href="{{ url_for('show_topset_from_workout_for_person' ,person_id=person_id, workout_id=workout_id, topset_id=1) }}"
                             class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
                             Edit
                         </a>
@@ -135,7 +135,8 @@
                         id="grid-zip" type="number">
                 </div>
             </div>
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded"
+            <button
+                class="sm:inline-flex text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center"
                 type="submit">
                 Add top set
             </button>
