--- a/templates/topset.html
+++ b/templates/topset.html
@@ -6,8 +6,8 @@
 
     <div class="mb-4 flex items-center justify-between">
         <div>
-            <h3 class="text-xl font-bold text-gray-900 mb-2">Gabe</h3>
-            <span class="text-base font-normal text-gray-500">Apr 23 ,2021</span>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">{{ topset['Name'] }}</h3>
+            <span class="text-base font-normal text-gray-500">{{ topset['StartDate'] }}</span>
         </div>
         <a href="#" class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
             Delete topset
@@ -29,9 +29,11 @@
                         <select
                             class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                             id="grid-state">
-                            <option value="1">Squats</option>
-                            <option value="2">Bench</option>
-                            <option value="3">Deadlift</option>
+                            {% for e in exercises %}
+                            <option value="{{ e['ExcerciseId'] }}" {% if topset['ExcerciseId']==e['ExcerciseId'] %}
+                                selected {% endif %}>{{
+                                e['Name']}}</option>
+                            {% endfor %}
                         </select>
                         <div
                             class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
@@ -48,7 +50,7 @@
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                        id="grid-city" type="number">
+                        id="grid-city" type="number" value="{{ topset['Repetitions']}}">
                 </div>
 
                 <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
@@ -57,7 +59,7 @@
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                        id="grid-zip" type="number">
+                        id="grid-zip" type="number" value="{{ topset['Weight']}}">
                 </div>
             </div>
             <button
