--- a/templates/workout.html
+++ b/templates/workout.html
@@ -9,9 +9,13 @@
             <h3 class="text-xl font-bold text-gray-900 mb-2">{{ workout_info['Name'] }}</h3>
             <span class="text-base font-normal text-gray-500">{{ workout_info['StartDate'] }}</span>
         </div>
-        <a href="#" class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
-            Delete workout
-        </a>
+        <form action="{{ url_for('delete_workout_from_person', person_id=person_id, workout_id=workout_id) }}"
+            method="delete">
+            <button
+                class="sm:inline-flex text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mt-6"
+                type="submit">Delete
+                workout</button>
+        </form>
     </div>
 
 </div>
