--- a/templates/workouts.html
+++ b/templates/workouts.html
@@ -54,20 +54,27 @@
                                         class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
                                         Edit
                                     </a>
-                                    <a href="{{ url_for('delete_workout_from_person', person_id=person_id, workout_id=w['workout_id'])}}"
-                                        class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
-                                        Delete
-                                    </a>
+
+                                    <form
+                                        action="{{ url_for('delete_workout_from_person', person_id=person_id, workout_id=w['workout_id']) }}"
+                                        method="delete" class="inline">
+                                        <button
+                                            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2"
+                                            type="submit">Delete</button>
+                                    </form>
                                 </td>
                             </tr>
                             {% endfor %}
 
                         </tbody>
                     </table>
-                    <a href=" {{ url_for('new_workout_for_person', person_id=person_id) }}"
-                        class="sm:inline-flex text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mt-6">
-                        New workout
-                    </a>
+
+                    <form action="{{ url_for('new_workout_for_person', person_id=person_id) }}" method="post">
+                        <button
+                            class="sm:inline-flex text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mt-6">New
+                            workout</button>
+                    </form>
+
                 </div>
             </div>
         </div>
