--- a/templates/topset.html
+++ b/templates/topset.html
@@ -31,7 +31,7 @@
                             class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                             id="grid-state" name="exercise_id">
                             {% for e in topset['Exercises'] %}
-                            <option value="{{ e['ExcerciseId'] }}" {% if topset['ExcerciseId']==e['ExcerciseId'] %}
+                            <option value="{{ e['ExerciseId'] }}" {% if topset['ExerciseId']==e['ExerciseId'] %}
                                 selected {% endif %}>{{
                                 e['Name']}}</option>
                             {% endfor %}
