--- a/templates/workout.html
+++ b/templates/workout.html
@@ -81,7 +81,7 @@
                             class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                             id="grid-state" name="exercise_id">
                             {% for e in workout['Exercises'] %}
-                            <option value="{{ e['ExcerciseId'] }}">{{
+                            <option value="{{ e['ExerciseId'] }}">{{
                                 e['Name']}}</option>
                             {% endfor %}
                         </select>
