--- a/templates/workout.html
+++ b/templates/workout.html
@@ -12,7 +12,7 @@
         <form action="{{ url_for('delete_workout', person_id=workout['PersonId'], workout_id=workout['WorkoutId']) }}"
             method="delete">
             <button
-                class="sm:inline-flex text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mt-6"
+                class="sm:inline-flex text-white bg-red-200 hover:bg-red-700 focus:ring-4 focus:ring-red-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mt-6"
                 type="submit">Delete
                 workout</button>
         </form>
@@ -26,6 +26,8 @@
 
     </div>
     <div class="flow-root">
+
+        {% if workout['TopSets']|length > 0 %}
         <table class="items-center w-full bg-transparent border-collapse">
             <thead>
                 <tr>
@@ -62,6 +64,13 @@
                 {% endfor %}
             </tbody>
         </table>
+        {% endif %}
+
+        {% if workout['TopSets']|length == 0 %}
+        <div class="bg-purple-100 rounded-lg py-5 px-6 mb-4 text-base text-purple-700 mb-3" role="alert">
+            No topsets found.
+        </div>
+        {% endif %}
     </div>
 </div>
 
